src/objects/AllFDPpilot__c.object
<CustomObject>
    <description>new FDP pilot students.</description>
    <fields>
        <fullName>activitydate__c</fullName>
        <label>activity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <description>start date of the pilot</description>
        <label>start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>studentpidm__c</fullName>
        <externalId>true</externalId>
        <label>student pidm</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>all FDP pilot</label>
    <nameField>
        <label>PIDM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FDP pilots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>